# CMake_Core

./: README.md
source/: .clang-format  CMakeLists.txt  main.cpp  main.hpp
source/lib/Boost/: Boost.txt
source/lib/Curl/: Curl.txt
source/lib/SFML/: SFML.txt
source/lib/wxWidgets/: wxWidgets.txt
source/modules/: CMakeLists.txt
source/modules/lib_1/: CMakeLists.txt
source/modules/lib_1/src/: file.cpp
source/resources/txt/: file.txt
source/unit_tests/test_1/: CMakeLists.txt
source/unit_tests/test_1/include/: file.hpp
source/unit_tests/test_1/src/: file.cpp
